fix seemore + spacing mission

--- a/src/pages/AboutUs/ProjectTeam/style.module.css
+++ b/src/pages/AboutUs/ProjectTeam/style.module.css
@@ -215,7 +215,7 @@
 }
 
 .member-name {
-	font-size: 18px;
+	font-size: 16px;
 }
 .overlay {
 	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%) !important;
